# robosnailbob-bringup

./: CMakeLists.txt  package.xml
config/: setup.sh
config/display/: README.md  display-hotplug.sh  fix-display.desktop  fix-display.sh
config/system/: gdm3-custom.conf
config/vnc/: x11vnc.service
launch/: robot.launch.py
rviz/: robot.rviz
scripts/: odom_timestamp_relay.py  pzem_battery_node.py  pzem_monitor.py
urdf/: tank_robot.xacro
