<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for RoboSnailBob — wheelchair tank-drive robot</description>
  <maintainer email="jadam@todo.todo">jadam</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- URDF / robot description -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- TF -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <!-- Sensors -->
  <exec_depend>kinect2_bridge</exec_depend>
  <exec_depend>unitree_lidar_ros2</exec_depend>

  <!-- SLAM / mapping -->
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_sync</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
